# aaa-seg

./: .gitignore  pyproject.toml
notebooks/: ct_viewer.ipynb  prompt.md  test.ipynb  view_ct.ipynb
scripts/: get_dataset_properties.py  preprocess.py  transform_dataset.py
src/: data.py  dataset.py  metrics.py  preprocessing.py  train.py
src/aaa_seg/models/: resnet.py  unet.py
src/models/: resnet.py  unet.py
