[project]
name = "aaa-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "camhpj", email = "camhpjohnson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "ruff>=0.12.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
